--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .header {
-  margin-top: 1em;  
+  margin-top: 1em;
 }
 
 mark {
@@ -98,18 +98,44 @@ mark {
 
 /* breakpoints */
 @media screen and (max-width: 400px) {
-  h1 {
-    font-size: 24px !important;
+  .my-name {
+    font-size: 22px !important;
+  }
+
+  .my-title {
+    font-size: 14px !important;
+  }
+
+  .logo-cont {
+    width: 100% !important;
+    text-align: center !important;
+  }
+
+  .name-cont {
+    width: 100% !important;
+    text-align: center !important;
+  }
+
+  .caption2 {
+    font-size: 1em;
+  }
+
+  .logo-container {
+    width: 100% !important;
+  }
+
+  .name-container {
+    width: 100% !important;
   }
 }
 
 @media screen and (max-width: 768px) {
-  h1 {
-    font-size: 30px !important;
+  .my-name {
+    font-size: 30px;
   }
 
-  h4 {
-    font-size: 16px !important;
+  .my-title {
+    font-size: 16px;
   }
 
   .caption1 {
